Added section breaks for Colab

--- a/AnatomyOfARobot.ipynb
+++ b/AnatomyOfARobot.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section I. INTRODUCTION\n",
-    "\n",
+    "# Section I. INTRODUCTION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Chapter 2. Anatomy of a Robot"
    ]
   },
@@ -57,8 +62,13 @@
     "The capabilities of robots have been changing fluidly over the years, as\n",
     "researchers invent new materials, fabrication strategies, circuits,\n",
     "computers, sensors, and actuation devices. Indeed, keeping up with the\n",
-    "state-of-the-art can be exhausting!\n",
-    "\n",
+    "state-of-the-art can be exhausting!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Links and Joints\n",
     "\n",
     "Like the bones of an animal, a robot's links offer structural support\n",
@@ -98,8 +108,13 @@
     "elephant trunks. For flexible links and soft robots, the traditional\n",
     "link-and-joint modeling framework that we will cover in depth in this\n",
     "book does not directly apply. Instead, more complex continuum mechanics\n",
-    "models should be used to analyze and predict their behavior.\n",
-    "\n",
+    "models should be used to analyze and predict their behavior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sensors\n",
     "\n",
     "Sensors are devices that measure some physical quantities of the world and encode the signals into electrical (typically digital) form.  There are many kinds of sensors, and more are being invented every year.  Common sensor types in robotics are given below.\n",
@@ -114,8 +129,13 @@
     "\n",
     "Most of the time, sensors are mounted to a link of the robot, and move while the robot moves.  The raw data produced by the sensor is often not particularly useful in itself (e.g., cameras will give you pixel colors rather than object identities), and perception algorithms must process this data into meaningful quantities.  It is important to build accurate models of the physics behind the sensor (and methods for \"inverting\" these physics) in order to help a robot correlate sensor signals into an understanding of the physical world.\n",
     "\n",
-    "The position and orientation of the sensor on the link is extremely important to be able to make sense of sensor data. A laser sensor may be saying that an obstacle is 1m away, but is the obstacle ahead, behind, to the left, or above the robot?  How close is too close before the robot ends up colliding?  We will look into this issue further  when we discuss calibration.\n",
-    "\n",
+    "The position and orientation of the sensor on the link is extremely important to be able to make sense of sensor data. A laser sensor may be saying that an obstacle is 1m away, but is the obstacle ahead, behind, to the left, or above the robot?  How close is too close before the robot ends up colliding?  We will look into this issue further  when we discuss calibration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Actuators and Transmissions\n",
     "\n",
     "An actuator is a mechanism that generates a force / torque given electrical signals; a transmission is a mechanism that applies an actuator's forces / torques to the robot's links.  Most commonly on industrial robots, actuators are electric motors while the transmissions are some sort of gearing system (e.g., gearbox).  On mobile robots, the transmissions from actuators to the ground are actually the wheels (or tracks).  It is also common to think of (and purchase) the actuator and transmission as a unit, such as with servomotors.\n",
@@ -189,8 +209,13 @@
     "\n",
     "(The terminology used in this chapter is highly influenced by Chapter 2\n",
     "in Stuart and Russell's excellent textbook *Artificial Intelligence: a\n",
-    "Modern Approach*.)\n",
-    "\n",
+    "Modern Approach*.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Sense-plan-act framework\n",
     "\n",
     "A cognitive architecture resides in the robot's mind, which controls the\n",
@@ -275,9 +300,13 @@
     "auto-calibration of a robot's sensors to correct for sensor drift, or large,\n",
     "such as reinforcement learning to adapt the robot's behavior according to\n",
     "observed outcomes.  Section VI discusses machine learning, calibration, and\n",
-    "reinforcement learning techniques to be used in such architectures.\n",
-    "\n",
-    "\n",
+    "reinforcement learning techniques to be used in such architectures.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Perception, planning, and control; hierarchical architectures\n",
     "\n",
     "The Plan component of the Sense-Plan-Act framework above can typically be broken down into three components: \n",
@@ -292,21 +321,19 @@
     "\n",
     "Although these components are described as though they would be separate stages of a pipeline, they actually interact at multiple levels based on the timing requirements of behavioral decisions.  The planning component is usually broken down so that mission-level decisions are made at the highest layer, which are then broken into subtasks that should be achieved on the order of seconds to minutes, which are then finally broken down into continuous reference motions at sub-second granularity.  In some sense, the control component is the lowest level of the planning hierarchy.\n",
     "\n",
-    "The perception component may also be hierarchical as well. Some sensor signals, like joint encoder values, are processed minimally to be used by the controller.  Others, like vision data, are processed with computationally expensive, relatively slow operations like map-building and object recognition so that mission planning can make significant decisions about the robot's behavior.\n",
-    "\n",
+    "The perception component may also be hierarchical as well. Some sensor signals, like joint encoder values, are processed minimally to be used by the controller.  Others, like vision data, are processed with computationally expensive, relatively slow operations like map-building and object recognition so that mission planning can make significant decisions about the robot's behavior.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The end-to-end approach\n",
     "\n",
     "In contrast to the perception-planning-control pipeline, the philosophy of *end-to-end* behavior attempts to compress the entire Plan component into a single monolithic function.  Because robot behavior is usually too complex to tune by hand, this philosophy is usually approached via the perspective of *end-to-end learning*, where the robot itself adjusts the behavior of the Plan component to achieve better outcomes.  Recently, this is becoming more a plausible approach given the success of deep neural networks in computer vision and related machine learning fields.\n",
     "\n",
     "However, there is still a long way to go before end-to-end robots are practical, and in fact there are *no commercially-significant robots in the world today that are developed using the end-to-end approach*.  Why might this be the case?  One may be that human scientists and engineers have developed exceptionally precise models for robot behavior that can't be matched using model-free approaches.  Another reason may be that the development process for the classical pipeline does a better job of exploiting the ingenuity of human engineering teams by imposing clear roles, responsibilities, and performance metrics for each component.  Indeed, it is very hard to determine why a system built entirely on machine learning made a mistake, which makes debugging and development much more difficult.  A final reason could be that the machine learning community simply does not yet have the right model for robotic cognition, and some breakthrough awaits just around the corner!  (Personally speaking, I enjoy the robot engineering process, and hope for the sake of myself, my colleagues, and my students that this latter scenario does not occur any time soon.)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -325,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
