--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section II. MODELING\n",
-    "\n",
+    "# Section II. MODELING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Chapter 3. Coordinates and Transformations\n",
     "\n",
     "<style>\n",
@@ -51,8 +56,13 @@
     "taken a course in linear algebra and can refresh themselves on basic\n",
     "definitions. Appendix 1 reviews the standard vector and matrix notation,\n",
     "conventions, and basic identities that will be used throughout this\n",
-    "book.\n",
-    "\n",
+    "book."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Vectors and coordinates\n",
     "-----------------------\n",
     "\n",
@@ -74,8 +84,13 @@
     "change depending on their manner of interpretation, such as a chosen\n",
     "frame of reference. This section will present common operations in 2D\n",
     "and 3D, and follow it with a discussion about the importance of\n",
-    "separating meaning from representation.\n",
-    "\n",
+    "separating meaning from representation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2D coordinate frames\n",
     "\n",
     "In the \"layman's definition\", an $n$-dimensional *vector* $\\mathbf{x}$ is a\n",
@@ -111,7 +126,7 @@
     "\n",
     "*************\n",
     "\n",
-    "![fig:Coordinates2D](figures/modeling/coordinate_axes_2d.png)\n",
+    "![fig:Coordinates2D](figures/modeling/coordinate_axes_2d.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:Coordinates2D\">Figure 1.</a> A point $P$ in the plane (a) has no numerical representation until we\n",
     "define a reference coordinate frame (b), which has origin point $O$ and\n",
@@ -128,8 +143,13 @@
     "coordinates does not define a position. A physical position is only\n",
     "defined by coordinates *in reference to a certain coordinate frame*. The\n",
     "frame will often be left implicit, or spoken of as the reference frame\n",
-    "of the coordinates.\n",
-    "\n",
+    "of the coordinates.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3D coordinate frames\n",
     "\n",
     "The situation in 3D space is similar, except that we represent a 3D\n",
@@ -144,8 +164,13 @@
     "*right-handed coordinate convention* in which the axes can be envisioned\n",
     "in the layout of the first three fingers of the right hand, suitably\n",
     "arranged at $90^\\circ$ right angles. $X$ axis corresponds to the thumb,\n",
-    "$Y$ axis corresponds to the index finger, and $Z$ axis corresponds to the middle finger.\n",
-    "\n",
+    "$Y$ axis corresponds to the index finger, and $Z$ axis corresponds to the middle finger."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Directional quantities\n",
     "\n",
     "Vectors are also used to represent *directional quantities*, such as a\n",
@@ -163,7 +188,7 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:DirectionalQuantities](figures/modeling/directional_quantities.png)\n",
+    "![fig:DirectionalQuantities](figures/modeling/directional_quantities.svg)\n",
     "\n",
     "<div class=\"figcaption\">\n",
     "<a name=\"fig:DirectionalQuantities\">Figure 2</a>. Directional quantities arise from displacements (a), directions (b),\n",
@@ -179,8 +204,13 @@
     "The major difference between directional and position quantities is that\n",
     "*coordinates of directional quantities do not vary with respect to the\n",
     "choice of origin*. However, coordinates of both positions and directions\n",
-    "are affected by the choice of coordinate axes.\n",
-    "\n",
+    "are affected by the choice of coordinate axes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Geometric operations\n",
     "\n",
     "The coordinates of a point $\\mathbf{p}$ after translation by a displacement\n",
@@ -244,8 +274,13 @@
     "and scaling are represented by matrix / vector operations. Changes of\n",
     "coordinate frames are also matrix / vector operations. As a result,\n",
     "transformation matrices are stored and operated on ubiquitously in\n",
-    "robotics.\n",
-    "\n",
+    "robotics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Linear transformations\n",
     "\n",
     "A *linear transformation* is one that can be represented as a matrix\n",
@@ -321,8 +356,8 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:Rotation2D](figures/modeling/rotation2d.png)\n",
-    "![fig:Rotation2D2](figures/modeling/rotation2d_2.png)\n",
+    "![fig:Rotation2D](figures/modeling/rotation2d.svg)\n",
+    "![fig:Rotation2D2](figures/modeling/rotation2d_2.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:Rotation2D\">Figure 5</a>. Rotating at an angle $\\theta$ about the origin to achieve a new point\n",
     "$P^\\prime$ (a). To calculate the coordinates of $P^\\prime$ (b), we first\n",
@@ -401,7 +436,7 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:Coordinates3D2](figures/modeling/rotation3d.png)\n",
+    "![fig:Coordinates3D2](figures/modeling/rotation3d.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:Coordinates3D2\">Figure 6</a>. After a rotation, the coordinates of the transformed point\n",
     "(relative to the original axes) are determined via a matrix\n",
@@ -440,7 +475,7 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:Coordinates3D](figures/modeling/coordinate_axes_3d.png)\n",
+    "![fig:Coordinates3D](figures/modeling/coordinate_axes_3d.svg)\n",
     "\n",
     "<div style=\"text-align:center\"><a name=\"fig:Coordinates3D2\">Figure 7</a>. A 3D rotation is encoded by a $3\\times 3$ matrix whose columns\n",
     "give the coordinates of the rotated axes $\\mathit{relative}$ to the original\n",
@@ -469,8 +504,13 @@
     "\n",
     "This definition can be generalized to $n$-D space using an $n$-D scaling\n",
     "vector $\\mathbf{s}$ which determines the scaling in each direction by mapping\n",
-    "to the diagonal of an $n \\times n$ matrix.. $$S(\\mathbf{s}) = diag(\\mathbf{s})$$\n",
-    "\n",
+    "to the diagonal of an $n \\times n$ matrix.. $$S(\\mathbf{s}) = diag(\\mathbf{s})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Compositions of linear transformations\n",
     "\n",
     "When performing two linear transformations one after another, the\n",
@@ -510,8 +550,13 @@
     "\n",
     "-   A rotation and a uniform scaling.\n",
     "\n",
-    "-   Two axis-aligned scalings.\n",
-    "\n",
+    "-   Two axis-aligned scalings.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Rigid transformations\n",
     "\n",
     "Rigid transformations in two dimensions have two properties:\n",
@@ -551,8 +596,13 @@
     "distributive property of matrix multiplication, we have\n",
     "$$\\mathbf{z} = R_1 R_2\\mathbf{x} + R_1 \\mathbf{t_2} + \\mathbf{t_1}.$$ This is simply a rigid\n",
     "transform with rotation matrix $R_1 R_2$ and translation by\n",
-    "$(R_1 \\mathbf{t_2} + \\mathbf{t_1})$.\n",
-    "\n",
+    "$(R_1 \\mathbf{t_2} + \\mathbf{t_1})$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Inverse transformations\n",
     "\n",
     "Not all transformations have inverses, but rotations, translations,\n",
@@ -566,8 +616,13 @@
     "rigid transformation: $$\\label{eq:RigidTransformInverse}\n",
     "T_{(R,\\mathbf{t})} ^{-1} = T_{(R^{T},-R^{T} \\mathbf{t})}$$ where\n",
     "$T_{(R,\\mathbf{t})}(\\mathbf{x}) = R \\mathbf{x} + \\mathbf{t}$. Proof of this equation will be\n",
-    "left as an exercise.\n",
-    "\n",
+    "left as an exercise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Rigid movement\n",
     "\n",
     "Rigid transformations are used to represent movement of rigid bodies in\n",
@@ -619,16 +674,16 @@
     "transforms. Suppose $A$ and $B$ are two coordinate frames, where $A$ is\n",
     "represented with respect to the world frame by a rotation matrix $R_A$\n",
     "and translation $\\mathbf{t}_A$, and $B$ is represented by $R_B$ and\n",
-    "$\\mathbf{t}_B$. Then given the coordinates $\\mathbf{p}_A$ of some point $P$\n",
+    "$\\mathbf{t}_B$. Then given the coordinates $\\mathbf{p}^A$ of some point $P$\n",
     "relative to $A$, we can determine $P$'s coordinates relative to\n",
-    "$\\mathbf{p}_B$ in two steps. First, we calculate its world coordinates:\n",
-    "$$\\mathbf{p}_W = R_A \\mathbf{p}_A + \\mathbf{t}_A$$ And then we perform the inverse of\n",
+    "$\\mathbf{p}^B$ in two steps. First, we calculate its world coordinates:\n",
+    "$$\\mathbf{p}^W = R_A \\mathbf{p}^A + \\mathbf{t}_A$$ And then we perform the inverse of\n",
     "$B$ coordinates to world coordinate to obtain its coordinates with\n",
-    "respect to $B$: $$\\mathbf{p}_B = R_B^T (\\mathbf{p}_W - \\mathbf{t}_B).$$\n",
+    "respect to $B$: $$\\mathbf{p}^B = R_B^T (\\mathbf{p}^W - \\mathbf{t}_B).$$\n",
     "\n",
     "This transform can be calculated for all points by the composition of\n",
     "the transform from $A \\rightarrow W$ and then $W \\rightarrow B$:\n",
-    "$$\\mathbf{p}_B = R_B^T R_A \\mathbf{p}_A + R_B^T(\\mathbf{t}_A - \\mathbf{t}_B).$$\n"
+    "$$\\mathbf{p}^B = R_B^T R_A \\mathbf{p}^A + R_B^T(\\mathbf{t}_A - \\mathbf{t}_B).$$\n"
    ]
   },
   {
@@ -686,8 +741,13 @@
     "This section will once again discuss the importance of separating the\n",
     "coordinate representation of an object from its physical meaning. It\n",
     "will also describe some common pitfalls when working with coordinates,\n",
-    "and tools to help reduce the risk of making calculation errors.\n",
-    "\n",
+    "and tools to help reduce the risk of making calculation errors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### An illustrative example\n",
     "\n",
     "Let us start with a running example where a point $P$ is drawn on a\n",
@@ -729,18 +789,23 @@
     "\n",
     "Luckily, we can do this more formally if we define $O$, $X$, and $Y$\n",
     "with reference so some other *privileged coordinate frame*, which we\n",
-    "will call the *world frame* $W$. If we let $\\mathbf{p}_W$, $\\mathbf{o}_W$,\n",
-    "$\\mathbf{x}_W$, and $\\mathbf{y}_W$ be the coordinates of $P$, $O$, $X$, and $Y$\n",
+    "will call the *world frame* $W$. If we let $\\mathbf{p}^W$, $\\mathbf{o}^W$,\n",
+    "$\\mathbf{x}^W$, and $\\mathbf{y}^W$ be the coordinates of $P$, $O$, $X$, and $Y$\n",
     "with respect to $W$, then we indeed have the relationship between their\n",
-    "coordinates $\\mathbf{p}_W = \\mathbf{o}_W + p_x \\mathbf{x}_W + p_y \\mathbf{y}_W$. Moreover,\n",
-    "$\\mathbf{x}_W \\cdot (\\mathbf{p}_W - \\mathbf{o}_W) = p_x$, and\n",
-    "$\\mathbf{y}_W \\cdot (\\mathbf{p}_W - \\mathbf{o}_W) = p_y$. An important fact is that\n",
+    "coordinates $\\mathbf{p}^W = \\mathbf{o}^W + p_x \\mathbf{x}^W + p_y \\mathbf{y}^W$. Moreover,\n",
+    "$\\mathbf{x}^W \\cdot (\\mathbf{p}^W - \\mathbf{o}^W) = p^x$, and\n",
+    "$\\mathbf{y}^W \\cdot (\\mathbf{p}^W - \\mathbf{o}^W) = p^y$. An important fact is that\n",
     "*these equations hold regardless of the choice of world frame*. Hence we\n",
     "can conclude that it is reasonable to casually state that\n",
     "$P = O + p_x X + p_y Y$, $X \\cdot (P - O) = p_x$, and\n",
     "$Y \\cdot (P - O) = p_y$ without regards to choosing a particular value\n",
-    "of $W$.\n",
-    "\n",
+    "of $W$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Directional quantities\n",
     "\n",
     "Next, let us illustrate how the coordinates of directional quantities\n",
@@ -763,8 +828,13 @@
     "cancels out when performing the difference. Using the same world\n",
     "coordinates trick as performed above, we can also say in casual\n",
     "shorthand that $D = d_x X + d_y Y$, $D = Q - P$, $d_x = D \\cdot X$, and\n",
-    "$d_y = D \\cdot Y$.\n",
-    "\n",
+    "$d_y = D \\cdot Y$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Associating physical meaning to operations on coordinates\n",
     "\n",
     "The main distinction between positions and directions is that the choice\n",
@@ -814,7 +884,13 @@
     "| P + V                  | Adding a direction to a point |\n",
     "\n",
     "Finally, dot products and norms are meaningful only when performed on\n",
-    "directional quantities.\n",
+    "directional quantities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Working with coordinates\n",
     "\n",
@@ -836,38 +912,46 @@
     "5.  Applying a coordinate transform to a quantity not represented with\n",
     "    respect to the source frame.\n",
     "\n",
+    "6. Operating on the wrong units (e.g., a frame's translation is expressed in *m* while the point's coordinates are expressed in *mm*)\n",
+    "\n",
     "To guard against these mistakes, it is common practice to indicate\n",
     "frames of reference with letters and annotate variables with their frame\n",
-    "of reference. As an example, this book indicates the frame of reference\n",
-    "of each coordinate variable in its subscript, e.g. $\\mathbf{p}_A$ denotes a\n",
+    "of reference.  The superscript/subscript convention used by this book is\n",
+    "popular amongst many authors.  In this convention, we indicate the frame\n",
+    "of reference of each coordinate variable in its superscript, e.g. $\\mathbf{p}^A$ denotes a\n",
     "point expressed in frame $A$. A coordinate transform from frame\n",
-    "$A \\rightarrow B$ is expressed in the form $T_{A\\rightarrow B}$. By\n",
-    "convention, a coordinate transform $T_A$ is equivalent to a transform\n",
-    "from $A$ to the world frame $W$: $T_A \\equiv T_{A \\rightarrow W}$. With\n",
-    "this annotation, the following rules apply:\n",
+    "$A$ to frame $B$ is expressed in the form $T_A^B$.  Think about it\n",
+    "this way:\n",
+    "\n",
+    "> $F$ in *superscript*: Coordinates should be interpreted as \"relative to $F$\".\n",
+    "\n",
+    "> $F$ in *subscript*: Coordinates should be interpreted as \"describing the transform of frame $F$\".\n",
+    "\n",
+    "In this convention, *superscripts and subscripts must cancel\n",
+    "out for the equation to make sense*.  Specifically, the following rules apply:\n",
     "\n",
     "1.  When applying a transform to a coordinate, the subscript of the\n",
-    "    transform's source frame must match the point's reference frame. For\n",
-    "    example, $\\mathbf{p}_B = T_{A\\rightarrow B}\\mathbf{p}_A$ is allowed but\n",
-    "    $T_{B\\rightarrow A}\\mathbf{p}_A$ is illegal.\n",
+    "    transform's source frame must match the point's superscript (reference\n",
+    "    frame). For example, $\\mathbf{p}^B = T_A^B\\mathbf{p}^A$ is allowed but\n",
+    "    $T_B^A \\mathbf{p}_B$ is illegal.\n",
     "\n",
     "2.  When composing two transforms, the source frame of the second frame\n",
     "    must match the destination of the first frame. For example,\n",
-    "    $T_{A\\rightarrow C} = T_{B \\rightarrow C} T_{A\\rightarrow B}$ is\n",
-    "    allowed but $T_{A\\rightarrow B} T_{B \\rightarrow C}$ is illegal.\n",
+    "    $T_A^C = T_B^C T_A^B$ is\n",
+    "    allowed but $T_A^B T_B^C$ is illegal.\n",
     "\n",
     "3.  When inverting a transform, the order of frames swaps: e.g.\n",
-    "    $T_{A\\rightarrow B}^{-1} = T_{B\\rightarrow A}$.\n",
+    "    $(T_A^B)^{-1} = T_B^A$.\n",
+    "   \n",
+    "4.  When adding or subtracting coordinates, their superscripts must match!\n",
+    "    For example, $\\mathbf{a}^W - \\mathbf{b}^W$ is the displacement between\n",
+    "    two points expressed in the world frame, but $\\mathbf{a}^W - \\mathbf{b}^C$\n",
+    "    is an illegal operation.\n",
     "\n",
-    "Another popular annotation used by some authors is a\n",
-    "superscript/subscript notation, in which the reference frame of a\n",
-    "coordinate and the destination frame of a transform are indicated as a\n",
-    "superscript, while the source frame of a transform is indicated as a\n",
-    "subscript. For example, $\\mathbf{p}^B = T_A^{B}\\mathbf{p}^A$ expresses the\n",
-    "coordinate transform of point $\\mathbf{p}$ from frame $A$ to $B$, and\n",
-    "$T_A^C = T_B^C T_A^B$ expresses the composition of two coordinate\n",
-    "transforms. In this convention, superscripts and subscripts must cancel\n",
-    "out for the equation to make sense.\n",
+    "By convention, a coordinate without a superscript is assumed to be associated\n",
+    "with the world frame $W$: $\\mathbf{p} \\equiv \\mathbf{p}^W$.  Moreover,a\n",
+    "coordinate transform $T_A$ is equivalent to a transform\n",
+    "from $A$ to $W$: $T_A \\equiv T_A^W$.\n",
     "\n",
     "Matrix expressions are similar to standard expressions regarding real\n",
     "numbers in that addition and subtraction are equivalent, multiplication\n",
@@ -885,8 +969,13 @@
     "3.  Assuming that a matrix is invertible (or worse, assuming a\n",
     "    non-square matrix is invertible).\n",
     "\n",
-    "4.  Performing operations on matrices of incompatible size.\n",
-    "\n",
+    "4.  Performing operations on matrices of incompatible size.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Coordinate management\n",
     "\n",
     "\n",
@@ -1047,7 +1136,12 @@
     "    `Point.to(frame)` and `Direction.to(frame)` that compute a new `Point`\n",
     "    and `Direction`, respectively, whose reference frames are now the\n",
     "    given frame, and whose coordinates are expressed correctly relative\n",
-    "    to the new frame.\n"
+    "    to the new frame.\n",
+    "\n",
+    "*   Extend the coordinate management system of exercise 12 to also include\n",
+    "    **units** that should be specified to the `Point`, `Direction`, and `Frame`\n",
+    "    structure upon construction. Implement support for `'m'`, `'mm'`, `'cm'` and `'km'`\n",
+    "    arguments indicating meters, millimeters, centimeters, and kilometers."
    ]
   },
   {
@@ -1108,7 +1202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
