Converted figures to SVG

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:TopologyRotation2D](https://github.com/krishauser/RoboticSystemsBook/blob/master/figures/modeling/topology_rotation_2d.png?raw=1)\n",
+    "![fig:TopologyRotation2D](figures/modeling/topology_rotation_2d.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:TopologyRotation2D\">Figure 1</a>. Top: The topology of the\n",
     "space of 2D rotations is homeomorphic to a\n",
@@ -369,7 +369,7 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:AxisAlignedRotations](https://github.com/krishauser/RoboticSystemsBook/blob/master/figures/modeling/axis_aligned_rotations.png?raw=1)\n",
+    "![fig:AxisAlignedRotations](figures/modeling/axis_aligned_rotations.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:AxisAlignedRotations\">Figure 2</a>. Axis-aligned\n",
     "rotations.</div>\n",
@@ -500,7 +500,7 @@
     "\n",
     "**************\n",
     "\n",
-    "![fig:RotationComposition](https://github.com/krishauser/RoboticSystemsBook/blob/master/figures/modeling/rotation3d_composition.png?raw=1)\n",
+    "![fig:RotationComposition](figures/modeling/rotation3d_composition.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:RotationComposition\">Figure 3</a>. The composition $R_1\\cdot R_2$\n",
     "of two rotation matrices corresponds to\n",
@@ -583,7 +583,7 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:RollPitchYaw](https://github.com/krishauser/RoboticSystemsBook/blob/master/figures/modeling/roll_pitch_yaw.png?raw=1)\n",
+    "![fig:RollPitchYaw](figures/modeling/roll_pitch_yaw.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:RollPitchYaw\">Figure 4.</a>\n",
     "Roll-pitch-yaw convention consists of a roll about the vehicle's\n",
@@ -705,7 +705,7 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:AxisAngleRotation](https://github.com/krishauser/RoboticSystemsBook/blob/master/figures/modeling/axis_angle_rotation.png?raw=1)\n",
+    "![fig:AxisAngleRotation](figures/modeling/axis_angle_rotation.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:AxisAngleRotation\">Figure 5</a>. Any\n",
     "    rotation matrix (bold) can be represented by a rotation of some angle about\n",
@@ -729,8 +729,13 @@
     "referred to many names in the literature, including Rodrigues\n",
     "parameters, exponential coordinates, or angular velocity. (It will\n",
     "become extremely useful when we discuss the derivative of rotation\n",
-    "matrices in the context of the angular velocity of rigid bodies.)\n",
-    "\n",
+    "matrices in the context of the angular velocity of rigid bodies.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Converting to rotation matrix\n",
     "\n",
     "To convert from axis-angle form to rotation matrices, we use *Rodrigues'\n",
@@ -772,9 +777,22 @@
     "\n",
     "Although this formula gives an expression for the transform, we can also\n",
     "rearrange terms to express it as a matrix. We will use the cross-product\n",
-    "matrix notation\n",
-    "$$\\hat{\\mathbf{v}} = \\begin{bmatrix} 0 & -v_z & v_y \\\\ v_z & 0 & -v_x \\\\ -v_y & v_x & 0 \\end{bmatrix}, \\label{eq:CrossProductMatrix}$$\n",
+    "matrix operator notation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\hat{\\mathbf{v}} =\n",
+    "\\begin{bmatrix}\n",
+    "0 & -v_z & v_y \\\\\n",
+    "v_z & 0 & -v_x \\\\\n",
+    "-v_y & v_x & 0\n",
+    "\\end{bmatrix}, \\label{eq:CrossProductMatrix}$$\n",
+    "\n",
     "so called because\n",
+    "\n",
     "$\\hat{\\mathbf{v}} \\mathbf{w} = \\mathbf{v} \\times \\mathbf{w}$."
    ]
   },
@@ -797,9 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QkTmjoJUst93"
-   },
+   "metadata": {},
    "source": [
     "The parenthesized term is the rotation matrix\n",
     "corresponding to the axis-angle representation:\n",
@@ -808,9 +824,15 @@
     "\n",
     "For rotation vector representation we simply convert to axis-angle form\n",
     "and use the formula above.\n",
-    "$$R_m(\\mathbf{m}) = R_{aa}(\\mathbf{m} / \\| \\mathbf{m} \\|, \\| \\mathbf{m} \\|)$$\n",
-    "\n",
-    "\n",
+    "$$R_m(\\mathbf{m}) = R_{aa}(\\mathbf{m} / \\| \\mathbf{m} \\|, \\| \\mathbf{m} \\|)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "QkTmjoJUst93"
+   },
+   "source": [
     "### Converting from a rotation matrix\n",
     "\n",
     "To convert back from a rotation matrix $R$ to axis-angle representation,\n",
@@ -1150,7 +1172,7 @@
    "source": [
     "## Interactive examples\n",
     "\n",
-    "The following interactive examples require Klampt-jupyter-extension and Klamp't to be installed on your system.  Instructions can be found at\n",
+    "The following interactive examples require Jupyter, Klamp't, and Klampt-jupyter-extension to be installed on your system.  Instructions can be found at\n",
     "[https://github.com/krishauser/Klampt-jupyter-extension](https://github.com/krishauser/Klampt-jupyter-extension)."
    ]
   },
