--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -4375,11 +4375,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive quiz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#This code must be run from the RoboticSystemsBook folder\n",
+    "from IPython.display import display,Markdown\n",
+    "from rsbook_code.assessment import quiz\n",
+    "quiz.show_inverse_kinematics()"
+   ]
   }
  ],
  "metadata": {
