--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -3949,6 +3949,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Interactive quiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Interactive quiz"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" href=\"//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9c716a774144f0cb1116ac2d3a4e2cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(HTMLMath(value='Q1. The process of forward kinematics computes what quantity(ies…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#This code must be run from the RoboticSystemsBook folder\n",
+    "from IPython.display import display,Markdown\n",
+    "from rsbook_code.assessment import quiz\n",
+    "quiz.show_forward_kinematics()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Interactive examples\n",
     "\n",
     "The following interactive examples require Klampt-jupyter-extension and Klamp't to be installed on your system.  Instructions can be found at\n",
@@ -4228,7 +4290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
